--- a/rent_management.html
+++ b/rent_management.html
@@ -77,6 +77,7 @@
                                             <tr class="text-center">
                                                 <th>No</th>
                                                 <th>Action</th>
+                                                <th>Rent ID</th>
                                                 <th>Borrower</th>
                                                 <th>ID Book</th>
                                                 <th>Title</th>
@@ -94,15 +95,16 @@
                                                 <td class="text-center">1</td>
                                                 <td class="text-center py-0 align-middle">
                                                     <div class="btn-group btn-group-sm">
-                                                        <a href="#" class="btn btn-primary" title="Accept"><i
-                                                                class="fas fa-check-square"></i></a>
-                                                        <a href="#" class="btn btn-danger" title="Cancel"><i
+                                                        <a href="#" class="btn btn-primary" onclick="acceptRent()"
+                                                            title="Accept"><i class="fas fa-check-square"></i></a>
+                                                        <a href="#" class="btn btn-danger" onclick="cancelRent()" title="Cancel"><i
                                                                 class="fas fa-window-close"></i></a>
                                                     </div>
                                                 </td>
-                                                <td>Chandra</td>
-                                                <td>Dilan 1991</td>
                                                 <td>001</td>
+                                                <td>Chandra</td>
+                                                <td>001</td>
+                                                <td>Dilan 1991</td>
                                                 <td>-</td>
                                                 <td>17 Nov 2020</td>
                                                 <td>20 Nov 2020</td>
@@ -117,9 +119,10 @@
                                                 <td class="text-center py-0 align-middle">
                                                     -
                                                 </td>
+                                                <td>002</td>
                                                 <td>Chandra</td>
-                                                <td>Dilan 1991</td>
                                                 <td>001</td>
+                                                <td>Dilan 1991</td>
                                                 <td>-</td>
                                                 <td>17 Nov 2020</td>
                                                 <td>20 Nov 2020</td>
@@ -137,9 +140,10 @@
                                                             title="Return"><i class="fas fa-exchange-alt"></i></a>
                                                     </div>
                                                 </td>
+                                                <td>003</td>
                                                 <td>Chandra</td>
-                                                <td>Dilan 1991</td>
                                                 <td>002</td>
+                                                <td>Dilan 1991</td>
                                                 <td>Librarian</td>
                                                 <td>17 Nov 2020</td>
                                                 <td>20 Nov 2020</td>
@@ -157,9 +161,10 @@
                                                             title="Return"><i class="fas fa-exchange-alt"></i></a>
                                                     </div>
                                                 </td>
+                                                <td>004</td>
                                                 <td>Chandra</td>
-                                                <td>Dilan 1991</td>
                                                 <td>003</td>
+                                                <td>Dilan 1991</td>
                                                 <td>Librarian</td>
                                                 <td>17 Nov 2020</td>
                                                 <td>20 Nov 2020</td>
@@ -174,9 +179,10 @@
                                                 <td class="text-center py-0 align-middle">
                                                     -
                                                 </td>
+                                                <td>005</td>
                                                 <td>Chandra</td>
-                                                <td>Dilan 1991</td>
                                                 <td>003</td>
+                                                <td>Dilan 1991</td>
                                                 <td>Librarian</td>
                                                 <td>17 Nov 2020</td>
                                                 <td>20 Nov 2020</td>
@@ -194,9 +200,10 @@
                                                             title="Payment"><i class="fas fa-file-invoice"></i></a>
                                                     </div>
                                                 </td>
+                                                <td>006</td>
                                                 <td>Chandra</td>
-                                                <td>Dilan 1991</td>
                                                 <td>004</td>
+                                                <td>Dilan 1991</td>
                                                 <td>Librarian</td>
                                                 <td>17 Nov 2020</td>
                                                 <td>20 Nov 2020</td>
@@ -211,9 +218,10 @@
                                                 <td class="text-center py-0 align-middle">
                                                     -
                                                 </td>
+                                                <td>007</td>
                                                 <td>Chandra</td>
-                                                <td>Dilan 1991</td>
                                                 <td>005</td>
+                                                <td>Dilan 1991</td>
                                                 <td>Librarian</td>
                                                 <td>17 Nov 2020</td>
                                                 <td>20 Nov 2020</td>
@@ -243,37 +251,42 @@
 
     </div>
 
-     <!-- jQuery -->
-     <script type="text/javascript" src="./assets/vendors/plugins/jquery/jquery.min.js"></script>
-     <!-- Bootstrap 4 -->
-     <script type="text/javascript" src="./assets/vendors/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-     <!-- overlayScrollbars -->
-     <!-- <script type="text/javascript" src="./plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script> -->
-     <!-- AdminLTE App -->
-     <script type="text/javascript" src="./assets/vendors/dist/js/adminlte.min.js"></script>
-     <!-- AdminLTE for demo purposes -->
-     <script type="text/javascript" src="./assets/vendors/dist/js/demo.js"></script>
-     <!-- extra JS to include HTML -->
-     <script src="./assets/js/js.js" type="text/javascript"></script>
-     <!-- Flickity -->
-     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
-     <script type="text/javascript" src="./assets/js/search.js" ></script>
-     <!-- InputMask -->
-     <script src="./assets/vendors/plugins/moment/moment.min.js"></script>
-     <script src="./assets/vendors/plugins/inputmask/min/jquery.inputmask.bundle.min.js"></script>
-     <!-- date-range-picker -->
-     <script src="./assets/vendors/plugins/daterangepicker/daterangepicker.js"></script>
-     <!-- Tempusdominus Bootstrap 4 -->
-     <script src="./assets/vendors/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-     <!-- Modul AddBook -->
-     <script type="text/javascript" src="./assets/js/modal.js"></script>
+    <!-- jQuery -->
+    <script type="text/javascript" src="./assets/vendors/plugins/jquery/jquery.min.js"></script>
+    <!-- Bootstrap 4 -->
+    <script type="text/javascript" src="./assets/vendors/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- overlayScrollbars -->
+    <!-- <script type="text/javascript" src="./plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script> -->
+    <!-- AdminLTE App -->
+    <script type="text/javascript" src="./assets/vendors/dist/js/adminlte.min.js"></script>
+    <!-- AdminLTE for demo purposes -->
+    <script type="text/javascript" src="./assets/vendors/dist/js/demo.js"></script>
+    <!-- extra JS to include HTML -->
+    <script src="./assets/js/js.js" type="text/javascript"></script>
+    <!-- Flickity -->
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+    <script type="text/javascript" src="./assets/js/search.js"></script>
+    <!-- InputMask -->
+    <script src="./assets/vendors/plugins/moment/moment.min.js"></script>
+    <script src="./assets/vendors/plugins/inputmask/min/jquery.inputmask.bundle.min.js"></script>
+    <!-- date-range-picker -->
+    <script src="./assets/vendors/plugins/daterangepicker/daterangepicker.js"></script>
+    <!-- Tempusdominus Bootstrap 4 -->
+    <script src="./assets/vendors/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+    <!-- Modul AddBook -->
+    <script type="text/javascript" src="./assets/js/modal.js"></script>
 
-     <!-- DataTables -->
+    <!-- DataTables -->
     <script src="./assets/vendors/plugins/datatables/jquery.dataTables.min.js"></script>
     <script src="./assets/vendors/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
     <script src="./assets/vendors/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
     <script src="./assets/vendors/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
     <script src="./assets/js/dtpage.js"></script>
+
+    <!-- CDN Sweet Alert 2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <!-- Rent Management JS -->
+    <script src="./assets/js/rentmanagement.js" type="text/javascript"></script>
 
 </body>
 
