--- a/return_book.html
+++ b/return_book.html
@@ -83,8 +83,8 @@
                                         </div>
                                         <!-- /.card-body -->
                                         <div class="card-footer text-center ">
-                                            <button type="reset" class="btn btn-default">Cancel</button>
-                                            <button type="submit" class="btn btn-info">Submit</button>
+                                            <a href="rent_management.html" class="btn btn-default">Cancel</a>
+                                            <a type="submit" onclick="saveReturn()" class="btn btn-info">Submit</a>
                                         </div>
                                         <!-- /.card-footer -->
                                 </form>
@@ -119,25 +119,10 @@
     <script src="./assets/vendors/dist/js/adminlte.min.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="./assets/vendors/dist/js/demo.js"></script>
-
-    <script>
-        function addRow(){
-            var addRow = '<div class="return-book-list-item"> <div class="form-group row"> <label class="col-sm-2 col-form-label text-right">Book :</label> <div class="col-sm-4"> <select name="book_id[]" class="form-control" onchange="setDetail(this)" > <option value="">Choose Book</option> <option value="001">Dilan 1991</option> <option value="002">Dilan 1992</option> <option value="003">Dilan 1993</option> </select> </div><div class="col-sm-2"> <button type="button" class="btn bg-gradient-danger" value="delete" onclick="deleteRow(this)" >Delete</button> </div></div><div class="return-book-list-detail"> </div></div>';
-            $('div.return-book-list').append(addRow);
-        }
-
-        function setDetail(x){
-            var i = $('select').index(x);
-            var detail = '<div class="form-group row"><div class="form-group col-sm-4"><span class="info">Book Title</span><input type="text" class="form-control" name="book_title[]" value="Dilan 1990" readonly></div><div class="form-group col-sm-4"><span>Borrowed On</span><input type="text" class="form-control" name="borrow_date[]" value="17 Nov 2020" readonly></div><div class="form-group col-sm-4"><span>Due On</span><input type="text" class="form-control" name="due_on[]" value="20 Nov 2020" readonly></div></div><div class="form-group row"><div class="form-group col-sm-4"><span class="info">Date Of Return</span><input type="text" class="form-control" name="return_date[]" value="21 Nov 2020" readonly></div><div class="form-group col-sm-4"><span>Late By</span><input type="text" class="form-control" name="late_by[]" value="1" readonly></div><div class="form-group col-sm-4"><span>Fine</span><input type="text" class="form-control" name="fine[]" value="5000" readonly></div></div>';
-            $('div.return-book-list-detail').eq(i).append(detail);
-        }
-
-        function deleteRow(x){
-            var i = $('[value="delete"]').index(x);
-            $('div.return-book-list-item').eq(i).remove();            
-        }
-    </script>
-
+    <!-- CDN Sweet Alert 2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <!-- Return Book JS -->
+    <script src="./assets/js/returnbook.js" type="text/javascript"></script>
 </body>
 
 </html>
