--- a/top_up_management.html
+++ b/top_up_management.html
@@ -51,32 +51,7 @@
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
       <!-- Content Header (Page header) -->
-      <!-- /.modal -->
-      <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">
-                Do you want to confirm?
-              </h5>
-              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">×</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              If you confirm this, then data can't be editted
-            </div>
-            <div class="modal-footer">
-              <button class="btn btn-secondary" type="button" data-dismiss="modal">
-                Cancel
-              </button>
-              <a class="btn btn-success" id="btn-confirm" href="#" data-dismiss="modal" data-toggle="modal"
-                data-target="#BerhasilModal" onclick="confirmstatus()">Confirm</a>
-            </div>
-          </div>
-        </div>
-      </div>
+      <!-- /.modal -->      
       <div class="modal fade" id="cancelModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -361,11 +336,11 @@
                 <tr>
                   <td>1</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" data-target="#confirmModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
                       <i class="fas fa-check"></i>
                     </button>
                     |
-                    <button type="button" class="btn" data-toggle="modal" data-target="#cancelModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
                       <i class="fas fa-ban"></i>
                     </button>
                   </td>
@@ -377,11 +352,11 @@
                 <tr>
                   <td>2</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" data-target="#confirmModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
                       <i class="fas fa-check"></i>
                     </button>
                     |
-                    <button type="button" class="btn" data-toggle="modal" data-target="#cancelModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
                       <i class="fas fa-ban"></i>
                     </button>
                   </td>
@@ -393,11 +368,11 @@
                 <tr>
                   <td>3</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" data-target="#confirmModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
                       <i class="fas fa-check"></i>
                     </button>
                     |
-                    <button type="button" class="btn" data-toggle="modal" data-target="#cancelModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
                       <i class="fas fa-ban"></i>
                     </button>
                   </td>
@@ -409,11 +384,11 @@
                 <tr>
                   <td>4</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" data-target="#confirmModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
                       <i class="fas fa-check"></i>
                     </button>
                     |
-                    <button type="button" class="btn" data-toggle="modal" data-target="#cancelModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
                       <i class="fas fa-ban"></i>
                     </button>
                   </td>
@@ -425,11 +400,11 @@
                 <tr>
                   <td>5</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" data-target="#confirmModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
                       <i class="fas fa-check"></i>
                     </button>
                     |
-                    <button type="button" class="btn" data-toggle="modal" data-target="#cancelModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
                       <i class="fas fa-ban"></i>
                     </button>
                   </td>
@@ -441,11 +416,11 @@
                 <tr>
                   <td>6</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" data-target="#confirmModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
                       <i class="fas fa-check"></i>
                     </button>
                     |
-                    <button type="button" class="btn" data-toggle="modal" data-target="#cancelModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
                       <i class="fas fa-ban"></i>
                     </button>
                   </td>
@@ -457,11 +432,11 @@
                 <tr>
                   <td>7</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" data-target="#confirmModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
                       <i class="fas fa-check"></i>
                     </button>
                     |
-                    <button type="button" class="btn" data-toggle="modal" data-target="#cancelModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
                       <i class="fas fa-ban"></i>
                     </button>
                   </td>
@@ -473,11 +448,11 @@
                 <tr>
                   <td>8</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" data-target="#confirmModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
                       <i class="fas fa-check"></i>
                     </button>
                     |
-                    <button type="button" class="btn" data-toggle="modal" data-target="#cancelModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
                       <i class="fas fa-ban"></i>
                     </button>
                   </td>
@@ -489,11 +464,11 @@
                 <tr>
                   <td>9</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" data-target="#confirmModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
                       <i class="fas fa-check"></i>
                     </button>
                     |
-                    <button type="button" class="btn" data-toggle="modal" data-target="#cancelModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
                       <i class="fas fa-ban"></i>
                     </button>
                   </td>
@@ -505,11 +480,11 @@
                 <tr>
                   <td>10</td>
                   <td>
-                    <button type="button" class="btn" data-toggle="modal" data-target="#confirmModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="confirmclick()">
                       <i class="fas fa-check"></i>
                     </button>
                     |
-                    <button type="button" class="btn" data-toggle="modal" data-target="#cancelModal">
+                    <button type="button" class="btn" data-toggle="modal" onclick="cancelclick()">
                       <i class="fas fa-ban"></i>
                     </button>
                   </td>
