--- a/change_password.html
+++ b/change_password.html
@@ -33,46 +33,7 @@
 <body class="hold-transition sidebar-mini layout-fixed">
     <!-- Site wrapper -->
     <div class="wrapper">
-      <!-- Navbar -->
-      <nav class="main-header navbar navbar-expand navbar-light navbar-white d-flex flex-row">
-        <!-- Left navbar links -->
-        <ul class="navbar-nav">
-          <li class="nav-item dropdown">
-            <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-              class="nav-link dropdown-toggle">All Categories</a>
-            <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow"
-              style="left: 0px; right: inherit;">
-              <li><a href="#" class="dropdown-item">Novel</a></li>
-              <li><a href="#" class="dropdown-item">Comic Book</a></li>
-              <li><a href="#" class="dropdown-item">Detective and Mystery</a></li>
-              <li><a href="#" class="dropdown-item">Historical Fiction</a></li>
-              <li><a href="#" class="dropdown-item">Horror</a></li>
-              <li><a href="#" class="dropdown-item">literary Fiction</a></li>
-              <!-- End Level two -->
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-              class="nav-link dropdown-toggle">All Time</a>
-            <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow"
-              style="left: 0px; right: inherit;">
-              <li><a href="#" class="dropdown-item">2020</a></li>
-              <li><a href="#" class="dropdown-item">2019</a></li>
-              <li><a href="#" class="dropdown-item">2018</a></li>
-              <li><a href="#" class="dropdown-item">2017</a></li>
-              <li><a href="#" class="dropdown-item">2016</a></li>
-              <li><a href="#" class="dropdown-item">2015</a></li>
-              <!-- End Level two -->
-            </ul>
-          </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
-          </li>
-        </ul>
-      </nav>
-      <!-- /.navbar -->
+    <div w3-include-html="include_navbar.html"></div>
     <div w3-include-html="include_sidebar.html"></div>
       <div class="content-wrapper">
       <!-- CHANGE PASSWORD PAGE -->
