--- a/payment_invoice_print.html
+++ b/payment_invoice_print.html
@@ -133,8 +133,6 @@
 </div>
 <!-- ./wrapper -->
 
-<script type="text/javascript"> 
-  window.addEventListener("load", window.print());
-</script>
+<script src="assets/js/print.js"></script>
 </body>
 </html>
